version/1.1/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`1.1.5 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.1.5>`_ - 2024-10-15
=======================================================================================

Fixed
^^^^^

- use ansys-sphinx-theme variables in CSS files `#537 <https://github.com/ansys/ansys-sphinx-theme/pull/537>`_

`1.1.4 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.1.4>`_ - 2024-10-14
=======================================================================================

Fixed
^^^^^

- fix: static search performance `#525 <https://github.com/ansys/ansys-sphinx-theme/pull/525>`_

`1.1.3 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.1.3>`_ - 2024-10-11
=======================================================================================

Fixed
^^^^^

- fix: add default `enter` for search `#542 <https://github.com/ansys/ansys-sphinx-theme/pull/542>`_

`1.1.2 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.1.2>`_ - 2024-10-02
=======================================================================================

Fixed
^^^^^

- fix: add version as params in cheatsheet `#521 <https://github.com/ansys/ansys-sphinx-theme/pull/521>`_

`1.1.1 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.1.1>`_ - 2024-10-01
=======================================================================================

Fixed
^^^^^

- fix(ci): update to Ansys actions v8 `#517 <https://github.com/ansys/ansys-sphinx-theme/pull/517>`_
- fix: update the token and email of bot for changelog actions `#519 <https://github.com/ansys/ansys-sphinx-theme/pull/519>`_

`1.1.0 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.1.0>`_ - 2024-10-01
=======================================================================================

Added
^^^^^

- feat: add static search `#487 <https://github.com/ansys/ansys-sphinx-theme/pull/487>`_


Changed
^^^^^^^

- chore: update CHANGELOG for v1.0.0 `#445 <https://github.com/ansys/ansys-sphinx-theme/pull/445>`_
- chore: update CHANGELOG for v1.0.1 `#447 <https://github.com/ansys/ansys-sphinx-theme/pull/447>`_
- chore: update CHANGELOG for v1.0.2 `#451 <https://github.com/ansys/ansys-sphinx-theme/pull/451>`_
- chore: update CHANGELOG for v1.0.3 `#455 <https://github.com/ansys/ansys-sphinx-theme/pull/455>`_


Fixed
^^^^^

- maint: update tooling, cleanup and drop python 3.9 `#484 <https://github.com/ansys/ansys-sphinx-theme/pull/484>`_
- feat: implement default search bar expansion behavior `#496 <https://github.com/ansys/ansys-sphinx-theme/pull/496>`_
- fix: the anchor url of search with the switcher version `#497 <https://github.com/ansys/ansys-sphinx-theme/pull/497>`_
- fix: change file location for `search.json` file `#509 <https://github.com/ansys/ansys-sphinx-theme/pull/509>`_
- maint: styles for dark theme search bar `#511 <https://github.com/ansys/ansys-sphinx-theme/pull/511>`_
- fix: style for smaller media `#513 <https://github.com/ansys/ansys-sphinx-theme/pull/513>`_
- fix: navigation end columns `#514 <https://github.com/ansys/ansys-sphinx-theme/pull/514>`_
- fix: add title breadcrumbs `#515 <https://github.com/ansys/ansys-sphinx-theme/pull/515>`_


Dependencies
^^^^^^^^^^^^

- maint: version 1.1.dev0 `#448 <https://github.com/ansys/ansys-sphinx-theme/pull/448>`_
- build(deps): bump pygithub from 2.3.0 to 2.4.0 `#480 <https://github.com/ansys/ansys-sphinx-theme/pull/480>`_
- build(deps): bump notebook from 7.2.1 to 7.2.2 `#482 <https://github.com/ansys/ansys-sphinx-theme/pull/482>`_
- build(deps): bump sphinx-autoapi from 3.2.1 to 3.3.0 `#485 <https://github.com/ansys/ansys-sphinx-theme/pull/485>`_
- build(deps): bump sphinx-autoapi from 3.3.0 to 3.3.1 `#488 <https://github.com/ansys/ansys-sphinx-theme/pull/488>`_
- build(deps): bump pandas from 2.2.2 to 2.2.3 `#508 <https://github.com/ansys/ansys-sphinx-theme/pull/508>`_
- build(deps): bump sphinx-autoapi from 3.3.1 to 3.3.2 `#512 <https://github.com/ansys/ansys-sphinx-theme/pull/512>`_


Documentation
^^^^^^^^^^^^^

- chore: update CHANGELOG for v1.0.4 `#463 <https://github.com/ansys/ansys-sphinx-theme/pull/463>`_
- chore: update CHANGELOG for v1.0.6 `#476 <https://github.com/ansys/ansys-sphinx-theme/pull/476>`_
- chore: update CHANGELOG for v1.0.7 `#478 <https://github.com/ansys/ansys-sphinx-theme/pull/478>`_
- chore: update CHANGELOG for v1.0.8 `#491 <https://github.com/ansys/ansys-sphinx-theme/pull/491>`_
- chore: update CHANGELOG for v1.0.9 `#501 <https://github.com/ansys/ansys-sphinx-theme/pull/501>`_
- chore: update CHANGELOG for v1.0.10 `#504 <https://github.com/ansys/ansys-sphinx-theme/pull/504>`_
- chore: update CHANGELOG for v1.0.11 `#507 <https://github.com/ansys/ansys-sphinx-theme/pull/507>`_

`1.0.11 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.11>`_ - 2024-09-19
=========================================================================================

Fixed
^^^^^

- fix: location of nbsphinx `#506 <https://github.com/ansys/ansys-sphinx-theme/pull/506>`_

`1.0.10 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.10>`_ - 2024-09-18
=========================================================================================

Fixed
^^^^^

- fix: do not display captions for nbgallery `#503 <https://github.com/ansys/ansys-sphinx-theme/pull/503>`_

`1.0.9 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.9>`_ - 2024-09-16
=======================================================================================

Added
^^^^^

- feat: add member_order to autoapi `#495 <https://github.com/ansys/ansys-sphinx-theme/pull/495>`_


Fixed
^^^^^

- fix: ``autoapi`` relative directory path wrt ``tox`` env `#494 <https://github.com/ansys/ansys-sphinx-theme/pull/494>`_

`1.0.8 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.8>`_ - 2024-09-03
=======================================================================================

Fixed
^^^^^

- fix: Align jupyter cell output `#489 <https://github.com/ansys/ansys-sphinx-theme/pull/489>`_
- fix: the download in sphinx gallery `#490 <https://github.com/ansys/ansys-sphinx-theme/pull/490>`_

`1.0.7 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.7>`_ - 2024-08-23
=======================================================================================

Fixed
^^^^^

- fix: autoapi extension `#472 <https://github.com/ansys/ansys-sphinx-theme/pull/472>`_
- fix: admonitions styles for ``topic`` admonition `#477 <https://github.com/ansys/ansys-sphinx-theme/pull/477>`_

`1.0.6 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.6>`_ - 2024-08-23
=======================================================================================

Fixed
^^^^^

- fix: download icon with sphinx-gallery and nbsphinx `#471 <https://github.com/ansys/ansys-sphinx-theme/pull/471>`_
- feat: add different width for different media for main content `#473 <https://github.com/ansys/ansys-sphinx-theme/pull/473>`_
- fix: the scrollbar on sidebar `#474 <https://github.com/ansys/ansys-sphinx-theme/pull/474>`_


Documentation
^^^^^^^^^^^^^

- chore: update CHANGELOG for v1.0.5 `#470 <https://github.com/ansys/ansys-sphinx-theme/pull/470>`_

`1.0.5 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.5>`_ - 2024-08-16
=======================================================================================

Fixed
^^^^^

- feat: add default logo links for Ansys and PyAnsys logos `#469 <https://github.com/ansys/ansys-sphinx-theme/pull/469>`_


Dependencies
^^^^^^^^^^^^

- build(deps): bump nbsphinx from 0.9.4 to 0.9.5 `#465 <https://github.com/ansys/ansys-sphinx-theme/pull/465>`_

`1.0.4 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.4>`_ - 2024-08-13
=======================================================================================

Fixed
^^^^^

- fix: tables and cell output `#460 <https://github.com/ansys/ansys-sphinx-theme/pull/460>`_


Dependencies
^^^^^^^^^^^^

- ci: bump ansys/actions from 6 to 7 `#457 <https://github.com/ansys/ansys-sphinx-theme/pull/457>`_
- build(deps): bump numpydoc from 1.7.0 to 1.8.0 `#459 <https://github.com/ansys/ansys-sphinx-theme/pull/459>`_

`1.0.3 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.3>`_ - 2024-08-09
=======================================================================================

Fixed
^^^^^

- fix: minor style changes `#452 <https://github.com/ansys/ansys-sphinx-theme/pull/452>`_
- fix: downgrade the autoapi and keep ``autoapi`` toctree to ``True`` by default `#453 <https://github.com/ansys/ansys-sphinx-theme/pull/453>`_
- fix: `pygment_styles` with dark and light theme and dark theme table `#454 <https://github.com/ansys/ansys-sphinx-theme/pull/454>`_

`1.0.2 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.2>`_ - 2024-08-08
=======================================================================================

Changed
^^^^^^^

- maint: update ansys actions `#449 <https://github.com/ansys/ansys-sphinx-theme/pull/449>`_


Fixed
^^^^^

- fix: sphinx design image background `#450 <https://github.com/ansys/ansys-sphinx-theme/pull/450>`_

`1.0.1 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.1>`_ - 2024-08-08
=======================================================================================

Fixed
^^^^^

- fix: stable docs indexing package name `#446 <https://github.com/ansys/ansys-sphinx-theme/pull/446>`_

`1.0.0 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v1.0.0>`_ - 2024-08-08
=======================================================================================

Added
^^^^^

- fix: update the github icon `#401 <https://github.com/ansys/ansys-sphinx-theme/pull/401>`_
- feat: add default logo and update logo option with theme `#425 <https://github.com/ansys/ansys-sphinx-theme/pull/425>`_
- feat: add quarto cheat sheet extension with cheat sheet option `#428 <https://github.com/ansys/ansys-sphinx-theme/pull/428>`_


Changed
^^^^^^^

- chore: update CHANGELOG for v0.16.2 `#381 <https://github.com/ansys/ansys-sphinx-theme/pull/381>`_
- chore: update CHANGELOG for v0.16.3 `#389 <https://github.com/ansys/ansys-sphinx-theme/pull/389>`_
- chore: update CHANGELOG for v0.16.4 `#390 <https://github.com/ansys/ansys-sphinx-theme/pull/390>`_
- chore: update CHANGELOG for v0.16.5 `#394 <https://github.com/ansys/ansys-sphinx-theme/pull/394>`_
- chore: update CHANGELOG for v0.16.6 `#402 <https://github.com/ansys/ansys-sphinx-theme/pull/402>`_


Fixed
^^^^^

- fix: Align cheat sheet center `#382 <https://github.com/ansys/ansys-sphinx-theme/pull/382>`_
- fix: reformat the style files `#406 <https://github.com/ansys/ansys-sphinx-theme/pull/406>`_
- fix: reformat the table styles `#408 <https://github.com/ansys/ansys-sphinx-theme/pull/408>`_
- fix: reformat navigation bar and background `#409 <https://github.com/ansys/ansys-sphinx-theme/pull/409>`_
- fix: `primary` ,`secondary` sidebars and links `#411 <https://github.com/ansys/ansys-sphinx-theme/pull/411>`_
- fix: sphinx design reformat `#412 <https://github.com/ansys/ansys-sphinx-theme/pull/412>`_
- fix: update the breadcrumbs `#419 <https://github.com/ansys/ansys-sphinx-theme/pull/419>`_
- fix: admonitions style `#424 <https://github.com/ansys/ansys-sphinx-theme/pull/424>`_
- fix: sidebar borders and overflow `#427 <https://github.com/ansys/ansys-sphinx-theme/pull/427>`_
- fix: search bar styles `#429 <https://github.com/ansys/ansys-sphinx-theme/pull/429>`_
- fix: updated the logo options `#431 <https://github.com/ansys/ansys-sphinx-theme/pull/431>`_
- fix: add dropdown styles for the header navigation bar `#437 <https://github.com/ansys/ansys-sphinx-theme/pull/437>`_
- fix: dark theme variables `#438 <https://github.com/ansys/ansys-sphinx-theme/pull/438>`_
- fix: sphinx card `box shadow` on focus `#439 <https://github.com/ansys/ansys-sphinx-theme/pull/439>`_
- fix: focus links with keyboard `#440 <https://github.com/ansys/ansys-sphinx-theme/pull/440>`_
- fix: search bar style for dark theme, icons links `#442 <https://github.com/ansys/ansys-sphinx-theme/pull/442>`_


Dependencies
^^^^^^^^^^^^

- build(deps-dev): update pydata-sphinx-theme requirement from <0.15,>=0.14 to >=0.15 `#336 <https://github.com/ansys/ansys-sphinx-theme/pull/336>`_
- chore: version 0.17.dev0 `#386 <https://github.com/ansys/ansys-sphinx-theme/pull/386>`_
- chore(deps): bump requests from 2.32.2 to 2.32.3 `#391 <https://github.com/ansys/ansys-sphinx-theme/pull/391>`_
- docs: reformat the documentation `#396 <https://github.com/ansys/ansys-sphinx-theme/pull/396>`_
- chore(deps): bump sphinx-autoapi from 3.1.1 to 3.1.2 `#405 <https://github.com/ansys/ansys-sphinx-theme/pull/405>`_
- build(deps): bump pyvista[jupyter] from 0.43.10 to 0.44.0 `#413 <https://github.com/ansys/ansys-sphinx-theme/pull/413>`_
- build(deps): bump jupytext from 1.16.2 to 1.16.3 `#415 <https://github.com/ansys/ansys-sphinx-theme/pull/415>`_
- build(deps): bump sphinx from 7.3.7 to 7.4.4 `#416 <https://github.com/ansys/ansys-sphinx-theme/pull/416>`_
- build(deps): bump sphinx from 7.4.4 to 7.4.5 `#417 <https://github.com/ansys/ansys-sphinx-theme/pull/417>`_
- build(deps): bump sphinx from 7.4.5 to 7.4.6 `#418 <https://github.com/ansys/ansys-sphinx-theme/pull/418>`_
- build(deps): bump sphinx-autoapi from 3.1.2 to 3.2.0 `#420 <https://github.com/ansys/ansys-sphinx-theme/pull/420>`_
- build(deps): bump sphinx-gallery from 0.16.0 to 0.17.0 `#421 <https://github.com/ansys/ansys-sphinx-theme/pull/421>`_
- build(deps): bump pyvista[jupyter] from 0.44.0 to 0.44.1 `#422 <https://github.com/ansys/ansys-sphinx-theme/pull/422>`_
- build(deps): bump sphinx from 7.4.6 to 7.4.7 `#423 <https://github.com/ansys/ansys-sphinx-theme/pull/423>`_
- build(deps): bump sphinx-autoapi from 3.2.0 to 3.2.1 `#426 <https://github.com/ansys/ansys-sphinx-theme/pull/426>`_
- build(deps): bump sphinx-notfound-page from 1.0.2 to 1.0.3 `#432 <https://github.com/ansys/ansys-sphinx-theme/pull/432>`_
- build(deps): bump jupytext from 1.16.3 to 1.16.4 `#433 <https://github.com/ansys/ansys-sphinx-theme/pull/433>`_
- build(deps): bump sphinx-notfound-page from 1.0.3 to 1.0.4 `#434 <https://github.com/ansys/ansys-sphinx-theme/pull/434>`_
- build(deps): bump sphinx-design from 0.6.0 to 0.6.1 `#435 <https://github.com/ansys/ansys-sphinx-theme/pull/435>`_
- build(deps): bump sphinx from 7.4.7 to 8.0.2 `#436 <https://github.com/ansys/ansys-sphinx-theme/pull/436>`_
- build(deps): bump sphinx-gallery from 0.17.0 to 0.17.1 `#441 <https://github.com/ansys/ansys-sphinx-theme/pull/441>`_


Miscellaneous
^^^^^^^^^^^^^

- refactor: remove function duplicate `#407 <https://github.com/ansys/ansys-sphinx-theme/pull/407>`_
- docs: Update `mail id` in README.rst `#414 <https://github.com/ansys/ansys-sphinx-theme/pull/414>`_

`0.16.6 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v0.16.6>`_ - 2024-06-18
=========================================================================================

Fixed
^^^^^

- fix: wrong env var name for PACKAGE_NAME `#395 <https://github.com/ansys/ansys-sphinx-theme/pull/395>`_

`0.16.5 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v0.16.5>`_ - 2024-05-31
=========================================================================================

Fixed
^^^^^

- fix:  sphinx design card font size `#393 <https://github.com/ansys/ansys-sphinx-theme/pull/393>`_

`0.16.4 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v0.16.4>`_ - 2024-05-29
=========================================================================================

Added
^^^^^

- feat: adapt package to general PyAnsys repository layout `#387 <https://github.com/ansys/ansys-sphinx-theme/pull/387>`_


Dependencies
^^^^^^^^^^^^

- chore(deps): bump sphinx-design from 0.5.0 to 0.6.0 `#383 <https://github.com/ansys/ansys-sphinx-theme/pull/383>`_
- chore(deps): bump sphinx-notfound-page from 1.0.1 to 1.0.2 `#384 <https://github.com/ansys/ansys-sphinx-theme/pull/384>`_
- chore(deps): bump sphinx-autoapi from 3.1.0 to 3.1.1 `#385 <https://github.com/ansys/ansys-sphinx-theme/pull/385>`_

`0.16.3 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v0.16.3>`_ - 2024-05-29
=========================================================================================

Fixed
^^^^^

- fix: update the sphinx design style to disable display of name `#388 <https://github.com/ansys/ansys-sphinx-theme/pull/388>`_

`0.16.2 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v0.16.2>`_ - 2024-05-22
=========================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.16.1 `#379 <https://github.com/ansys/ansys-sphinx-theme/pull/379>`_


Miscellaneous
^^^^^^^^^^^^^

- docs: update changelog_template.jinja `#380 <https://github.com/ansys/ansys-sphinx-theme/pull/380>`_

`0.16.1 <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v0.16.1>`_ - 2024-05-22
=========================================================================================

Added
^^^^^

- feat: add nerd fonts for ``autoapi`` templates icon `#362 <https://github.com/ansys/ansys-sphinx-theme/pull/362>`_
- feat: add the changelog action `#370 <https://github.com/ansys/ansys-sphinx-theme/pull/370>`_
- feat: add autoapi extension `#372 <https://github.com/ansys/ansys-sphinx-theme/pull/372>`_


Fixed
^^^^^

- fix: add changelog action in ci-cd `#378 <https://github.com/ansys/ansys-sphinx-theme/pull/378>`_


Dependencies
^^^^^^^^^^^^

- chore(deps): bump requests from 2.31.0 to 2.32.1 `#374 <https://github.com/ansys/ansys-sphinx-theme/pull/374>`_
- maint: update the sphinx-autoapi version `#375 <https://github.com/ansys/ansys-sphinx-theme/pull/375>`_
- chore(deps): bump sphinx-notfound-page from 1.0.0 to 1.0.1 `#376 <https://github.com/ansys/ansys-sphinx-theme/pull/376>`_
- chore(deps): bump requests from 2.32.1 to 2.32.2 `#377 <https://github.com/ansys/ansys-sphinx-theme/pull/377>`_

.. vale on
